Make sure that parquet download paths aren't overly url encoded (#1553)
Paths currently look like:
https://myacoount.blob.core.windows.net/datasetId/metadata%2Fmanifests%2FflightId%2Fmanifest.json?<sas_oken>
 which is not valid.
This PR would make the same URL look like:
https://myacoount.blob.core.windows.net/datasetId/metadata/manifests/flightId/Fmanifest.json?<sas_token>